--- a/Stocks/app/src/main/res/values/strings.xml
+++ b/Stocks/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">Stocks</string>
+    <string name="app_label">Stocks</string>
+    <string name="search_hint">Stocks</string>
+    <string name="search_title">Stocks</string>
+
+
+
+    <string-array name="months_array">
+        <item>January</item>
+        <item>February</item>
+        <item>March</item>
+        <item>April</item>
+        <item>May</item>
+        <item>June</item>
+        <item>July</item>
+        <item>August</item>
+        <item>September</item>
+        <item>October</item>
+        <item>November</item>
+        <item>December</item>
+    </string-array>
 </resources>
