--- a/Stocks/app/src/main/res/values/strings.xml
+++ b/Stocks/app/src/main/res/values/strings.xml
@@ -20,4 +20,14 @@
         <item>November</item>
         <item>December</item>
     </string-array>
+
+    <string-array name="favorites_array">
+        <item>MSFT</item>
+        <item>NVDA</item>
+    </string-array>
+
+    <string-array name="purchased_array">
+        <item>AAPL</item>
+        <item>TSLA</item>
+    </string-array>
 </resources>
