retrieving favorite stocks through local storage
the class calls it local storage but we use the sharedPreferences functionality

--- a/Stocks/app/src/main/res/values/strings.xml
+++ b/Stocks/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
         <item>NVDA</item>
     </string-array>
 
-    <string-array name="purchased_array">
+    <string-array name="portfolio_array">
         <item>AAPL</item>
         <item>TSLA</item>
     </string-array>
